crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@literals_in_cairo_m___integer_literals.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Literals in Cairo-M - Integer Literals"
input_file: mdtest/01-basics/01-literals.md
---
Source:
fn test_integer() -> felt {
    return 42;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_integer {
    entry: 0

    0:
      return 42

  }

}
