crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@literals_in_cairo_m___negative_numbers.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Literals in Cairo-M - Negative Numbers"
input_file: mdtest/01-basics/01-literals.md
---
Source:
fn test_negative() -> felt {
    let x = -5;
    return x + 10;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_negative {
    entry: 0

    0:
      %0 = Neg 5
      %1 = %0 + 10
      return %1

  }

}
